infrastructure/kubernetes/templates/network/allow-intra-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paynext-allow-intra-namespace
  namespace: { { .Values.global.namespace | default "paynext" } }
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
  policyTypes:
    - Ingress
