infrastructure/kubernetes/templates/network/api-gateway-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paynext-api-gateway-policy
  namespace: { { .Values.global.namespace | default "paynext" } }
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: api-gateway
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: fintech-payment-frontend
      ports:
        - protocol: TCP
          port: 8002
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8002
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: eureka-server
      ports:
        - protocol: TCP
          port: 8001
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: user-service
      ports:
        - protocol: TCP
          port: 8000
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: payment-service
      ports:
        - protocol: TCP
          port: 8003
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: notification-service
      ports:
        - protocol: TCP
          port: 8004
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
  policyTypes:
    - Ingress
    - Egress
