infrastructure/kubernetes/templates/network/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paynext-default-deny-all
  namespace: { { .Values.global.namespace | default "paynext" } }
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
